--- a/charts/ui-plugin-operator/101.0.0+up0.1.0/values.yaml
+++ b/charts/ui-plugin-operator/101.0.0+up0.1.0/values.yaml
@@ -64,4 +64,11 @@ global:
     # pspAnnotations: {}
 
 debug: false
-debugLevel: 0
+debugLevel: 4
+
+targetArray:
+  targets:
+    - name: "one"
+      value: 1
+    - name: "two"
+      value: 2
